# hal

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  Doxyfile.in  HACKING  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.in  hal-policy.pc.in  hal-storage.pc.in  hal.conf  hal.conf.in  hal.pc.in
doc/: TODO  (+1 more)
doc/conf/: Makefile.am  match-USB-camera.fdi  match-USB-mp3-player.fdi  match-cardreader.fdi  storage-non-fixed.fdi  storage-policy-examples.fdi  storage-skip-all.fdi
doc/man/: .gitignore  Makefile.am  hal-disable-polling.1.in  hal-find-by-capability.1.in  hal-find-by-property.1.in  hal-get-property.1.in  hal-is-caller-locked-out.1.in  hal-is-caller-privileged.1.in  hal-lock.1.in  hal-set-property.1.in  hald.1.in  hald.8.in  lshal.1.in
doc/spec/: .cvsignore  .gitignore  Makefile.am  config.xsl  docbook.css  example-manager.py  examply-manager.py  hal-arch.dia  hal-linux26.dia  hal-sequence-diagram.dia  hal-spec-access-control.xml  hal-spec-examples.xml  hal-spec-fdi-files.xml  hal-spec-interfaces.xml  hal-spec-introduction.xml  hal-spec-locking.xml  hal-spec-properties.xml  hal-spec.html  hal-spec.xml.in  hal-spec.xml.in.in
fdi/20freedesktop/: 6in1-card-reader.fdi  Makefile.am  canon-digital-ixus-v.fdi  ibm-usb-hub-keyboard.fdi  ide-drives.fdi  jetflash-mp3-player.fdi  lexar-cf-card-reader.fdi  lexar-media-cf-reader.fdi  lucent-pcmcia-wireless.fdi  sony_dsc.fdi  usb-pda-devices.fdi  usb-pda-serial.fdi  usb-zip-drives.fdi
hald/: .cvsignore  .gitignore  Makefile.am  access-check.c  access-check.h  cache_test.c  callout.c  callout.h  ci-tracker.c  ci-tracker.h  ck-tracker.c  ck-tracker.h  create_cache.c  debug-hald.sh  device.c  device.h  device_info.c  device_info.h  device_pm.c  device_pm.h  device_store.c  device_store.h  hal-file-monitor.h  hald-cache-test.sh  hald.c  hald.conf  hald.h  hald_conf.c  hald_conf.h  hald_dbus.c  hald_dbus.h  hald_marshal.list  hald_runner.c  hald_runner.h  hald_test.c  hald_test_libhal.c  haldaemon.in  ids.c  ids.h  logger.c  (+21 more)
hald-runner/: .gitignore  Makefile.am  main.c  runner.c  runner.h  utils.c  utils.h
hald/dummy/: Makefile.am  osspec.c
hald/freebsd/: Makefile.am  README  TODO  hal-file-monitor.c  hf-acpi.c  hf-acpi.h  hf-ata.c  hf-ata.h  hf-block.c  hf-block.h  hf-computer.c  hf-computer.h  hf-devd.c  hf-devd.h  hf-devtree.c  hf-devtree.h  hf-drm.c  hf-drm.h  hf-net.c  hf-net.h  hf-osspec.h  hf-pci.c  hf-pci.h  hf-pcmcia.c  hf-pcmcia.h  hf-scsi.c  hf-scsi.h  hf-serial.c  hf-serial.h  hf-sound.c  hf-sound.h  hf-storage.c  hf-storage.h  hf-usb.c  hf-usb.h  hf-usb2.c  hf-usb2.h  hf-util.c  hf-util.h  hf-volume.c  (+2 more)
hald/linux/: .gitignore  Makefile.am  acpi.c  acpi.h  apm.c  apm.h  block_class_device.c  blockdev.c  blockdev.h  bus_device.c  bus_device.h  class_device.c  class_device.h  classdev.c  coldplug.c  common.c  common.h  device.c  device.h  hal-file-monitor.c  hald_helper.h  hotplug.c  hotplug.h  hotplug_helper.h  ide_bus_device.c  ide_host_bus_device.c  ids.c  ieee1394_class_device.c  ieee1394_host_class_device.c  ieee1394_node_class_device.c  input_class_device.c  linux_class_block.c  linux_class_block.h  linux_class_i2c_adapter.c  linux_class_i2c_adapter.h  linux_class_input.c  linux_class_input.h  linux_class_net.c  linux_class_net.h  linux_class_scsi.c  (+41 more)
hald/linux2/: .gitignore  Makefile.am  acpi.c  acpi.h  apm.c  apm.h  blockdev.c  blockdev.h  classdev.c  classdev.h  coldplug.c  coldplug.h  hotplug.c  hotplug.h  hotplug_helper.h  ids.c  ids.h  osspec.c  osspec_linux.h  pcmcia_cs.h  pcmcia_utils.c  pcmcia_utils.h  physdev.c  physdev.h  pmu.c  pmu.h  util.c  util.h
hald/solaris/: .gitignore  Makefile.am  devinfo.c  devinfo.h  devinfo_ieee1394.c  devinfo_ieee1394.h  devinfo_misc.c  devinfo_misc.h  devinfo_pci.c  devinfo_pci.h  devinfo_storage.c  devinfo_storage.h  devinfo_usb.c  devinfo_usb.h  hal.xml  hotplug.c  hotplug.h  osspec.c  osspec_solaris.h  svc-hal  sysevent.c  sysevent.h
libhal/: Makefile.am  libhal.c  libhal.h
libhal-policy/: Makefile.am  libhal-policy-test.c  libhal-policy.c  libhal-policy.h
libhal-storage/: Makefile.am  libhal-storage.c  libhal-storage.h
policy/: Makefile.am  hal-device-file.policy  hal-killswitch.policy  hal-lock.policy  hal-power.policy  hal-storage.policy  org.freedesktop.hal.device-access.policy  org.freedesktop.hal.storage.policy
policy/txt/: Makefile.am  (+8 more)
privileges/: Makefile.am  hal-device-file.priv  hal-killswitch.priv  hal-power-cpufreq.privilege  hal-power-hibernate.privilege  hal-power-poweroff.privilege  hal-power-reboot.privilege  hal-power-suspend.privilege  hal-power.priv  hal-storage-fixed-mount-all-options.privilege  hal-storage-fixed-mount.privilege  hal-storage-removable-mount-all-options.privilege  hal-storage-removable-mount.privilege  hal-storage.priv
tools/: .cvsignore  .gitignore  Makefile.am  fstab-sync.8.in  fstab-sync.c  gen-libgphoto-hal-fdi  hal-acl-add.c  hal-acl-remove.c  hal-acl-tool.c  hal-device-manager  hal-device-manager.glade  hal-device.c  hal-disable-polling.c  hal-functions  hal-is-caller-locked-out.c  hal-is-caller-privileged.c  hal-lock.c  hal-luks-remove  hal-luks-remove.in  hal-luks-setup  hal-luks-setup.in  hal-luks-teardown  hal-policy-is-privileged.c  hal-setup-keymap-hash-name.h  hal-setup-keymap.c  hal-storage-cleanup-all-mountpoints.c  hal-storage-cleanup-mountpoint.c  hal-storage-closetray.c  hal-storage-eject.c  hal-storage-mount.c  hal-storage-shared.c  hal-storage-shared.h  hal-storage-unmount.c  hal-system-bluetooth-get-power  hal-system-bluetooth-set-power  hal-system-killswitch-get-power  hal-system-killswitch-set-power  hal-system-lcd-get-brightness  hal-system-lcd-set-brightness  hal-system-power-hibernate  (+23 more)
volume_id/: Makefile.am  cramfs.c  dasd.c  ext.c  fat.c  hfs.c  highpoint.c  hpfs.c  iso9660.c  isw_raid.c  jfs.c  linux_raid.c  linux_swap.c  logging.h  lsi_raid.c  luks.c  luks.h  lvm.c  mac.c  minix.c  msdos.c  ntfs.c  nvidia_raid.c  ocfs2.c  promise_raid.c  reiserfs.c  romfs.c  silicon_raid.c  sysv.c  udf.c  ufs.c  util.c  util.h  via_raid.c  volume_id.c  volume_id.h  xfs.c
(+354 files in other folders)
